# ME759

./: .gitignore  CMakeLists.txt  README.md  problem3.txt
Assigment2/: Makefile  problem1.in  problem1a  problem1a.c  problem1b  problem1b.c
Assigment3/: problem3.c
Assigment4/: CMakeLists.txt
Assignment1/: CMakeLists.txt  problem1.c  problem2.c  problem3.cpp
Assignment1/handin/: Makefile  problem1  problem1.c  problem2  problem2.c  problem3
Assignment2/: Assignment2.cbp  CMakeLists.txt  Makefile  problem1.in  problem1a  problem1a.c  problem1b  problem1b.c  problem2  problem2_1024.in  problem2_128.in  problem2_2048.in  problem2_256.in  problem2_32.in  problem2_4096.in  problem2_512.in  problem2_64.in  problem2a  problem2a.c  problem3a  problem3a.c  problem3b  problem3b.c
Assignment3/: Assignment3.cbp  CMakeLists.txt  Niko_memory_mountani.eps  problem1  problem1.c  problem2  problem2.c  problem2.txt  problem3.cu
Assignment4/: Assignment3.cbp  CMakeLists.txt  problem1.cu  problem2.cu  problem2.xlsx  problem3.cu  randoms.c  randoms.h
Assignment5/: CMakeLists.txt  matrixadd.cu  matrixadd_kernel.cu  p1.sh  problem2.cu
Assignment6/: CMakeLists.txt  problem1.cu
Assignment7/: 2Dconvolution.h  CMakeLists.txt  problem2.cu
handin/: problem1.c  problem2.c  student.txt
